# esp-32-web-captive-tree-hydration

./: CMakeLists.txt
src/: CMakeLists.txt  main.c
src/actuators/: motor_controller.c  motor_controller.h
src/config/: config_manager.c  config_manager.h
src/mqtt/: mqtt_manager.c  mqtt_manager.h
src/pid/: pid_controller.c  pid_controller.h
src/sensors/: moisture_sensor.c  moisture_sensor.h
src/web/: captive_portal.c  captive_portal.h  web_server.c  web_server.h
src/wifi/: wifi_manager.c  wifi_manager.h
